# CSR_set

./: .gitignore  CMakeLists.txt  csr_adaptive.cu  cuSPARSE.cu  helper.cpp  helper.h
bak/: csrStream.cubak  csr_scaler_improved.cu.bak
data/: ans.txt  csr_format.txt  helper.py  summary.txt  x.txt
data/Singular/: ans.txt  csr_format.txt  summary.txt  x.txt
deprecated/: csr_scaler.cu  csr_vector.cu
